issues resolved and assets link updated  (#87)
* schema updated with 'take_notes' and prettier config added

* chore: cutoff_time_for_non_high_priority_activities & priority fields added

* chore: priority type updated and category field added

* refactor: downgraded action/checkout to v2

* chore: restored checkout default reference

* chore: checkout info added

* checkout action removed

* restore action checkout and readme.md added

* ref value added in yml file

* issue #145 resolved and yml file updated

* modifiy repo path in yml file

* modifiy custom action path in yml file & readme updated

* refactor custom action path in yml file

* refactor readme file with custom action path

* refactor runs-on and custome action name

* refactor: yml files modified

* action path updated

* update.ini removed

* needstranslation marker added and readme.md updated

* yml runtime enviroment updated

* comma removed and rebuild index.js

* event trigger types added

* issue #77 resolved

* Revert "issue #77 resolved"

This reverts commit ece9c9f9f67edb2e8215336cc243de5e66996f22.

* feat: issue 84 & 85 resolved

* refactor: comments on issue 84

* chore: update style.css & script.js with github assets

--- a/focus-blocked/style.css
+++ b/focus-blocked/style.css
@@ -15,15 +15,12 @@
   font-family: monospace;
   position: relative;
 }
-h1,
-p {
-  margin: 0;
-}
 
-p {
+.container > p {
   font-size: 20px;
   font-weight: 600;
 }
+
 .notice-wrapper {
   display: flex;
   flex-direction: column;
@@ -38,15 +35,16 @@ p {
   text-align: justify;
 }
 
+.notice-wrapper > a {
+  font-weight: bold;
+}
+
 #progressWrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 10px;
-}
-a {
-  font-weight: bold;
 }
 
 #focusTipWrapper {
@@ -78,7 +76,7 @@ a {
 #privacyContainer {
   width: 100%;
   position: absolute;
-  bottom: 3%;
+  bottom: 10%;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -89,9 +87,8 @@ a {
 
 .privacyNotice {
   width: 75%;
-  font-size: 13px;
+  font-size: 16px;
   text-align: justify;
-  margin: 0;
 }
 
 .hidePrivacyNotice {
@@ -180,8 +177,7 @@ a {
   overflow: auto;
 }
 
-.popup .content button,
-a {
+.popup .content > button + a {
   width: fit-content;
   padding: 6px 10px;
   border-radius: 5px;
@@ -217,5 +213,23 @@ a {
     flex-direction: column;
     align-items: center;
     gap: 8px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .privacyNotice {
+    font-size: 17px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .privacyNotice {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (min-width: 1366px) {
+  .privacyNotice {
+    font-size: 20px;
   }
 }
